# smartthings-mqtt

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.relay.yml  docker-compose.yml  pyproject.toml
config/: devices.yaml.example
docs/: vlan-proxy.md
src/smartthings_mqtt/: __init__.py  __main__.py  config.py  daemon.py  transport.py
src/smartthings_mqtt/local/: __init__.py  client.py  pairing.py  relay.py  subnet.py  wol.py
src/smartthings_mqtt/mqtt/: __init__.py  bridge.py  client.py  homeassistant.py
src/smartthings_mqtt/smartthings/: __init__.py  client.py  discovery.py  tv_device.py
tests/: test_discovery.py  test_mqtt_client.py  test_mqtt_homeassistant.py  test_relay.py  test_transport.py  test_tv_device.py
